Change email links & fix alignment

--- a/src/vismod_web/static/about-site.css
+++ b/src/vismod_web/static/about-site.css
@@ -92,9 +92,9 @@ body {
   }
 
   .link {
-    color: #333;
+    color: var(--primary);
     text-decoration: none;
-    transition: color 0.3s ease-in-out;
+    transition: color var(--transition-speed);
     position: relative;
   }
 
